# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.110 2014/01/04 18:01:55 polynomial-c Exp $

  04 Jan 2014; Lars Wendler <polynomial-c@gentoo.org>
  -e2fsprogs-libs-1.41.12.ebuild, -e2fsprogs-libs-1.41.14.ebuild,
  -e2fsprogs-libs-1.42.ebuild, -e2fsprogs-libs-1.42.1.ebuild,
  -e2fsprogs-libs-1.42.3.ebuild, -e2fsprogs-libs-1.42.4.ebuild,
  -e2fsprogs-libs-1.42.5.ebuild, -e2fsprogs-libs-1.42.6.ebuild,
  -e2fsprogs-libs-1.42.7-r1.ebuild, -files/e2fsprogs-libs-1.42.5-ldflags.patch:
  Removed old versions and files.

*e2fsprogs-libs-1.42.9 (31 Dec 2013)

  31 Dec 2013; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-libs-1.42.9.ebuild,
  +files/e2fsprogs-libs-1.42.9-no-quota.patch:
  Version bump #496594 by Ulenrich.

*e2fsprogs-libs-1.42.8 (08 Oct 2013)

  08 Oct 2013; Tony Vroon <chainsaw@gentoo.org> +e2fsprogs-libs-1.42.8.ebuild:
  Version bump, as requested by Laurent Bachelier in bug #476670.

*e2fsprogs-libs-1.42.7-r1 (21 Aug 2013)

  21 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  +e2fsprogs-libs-1.42.7-r1.ebuild:
  Convert to multilib and stack it for baselibs -r13. Bug #481362.

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
  Stable for s390, wrt bug #467008

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
  Stable for ppc64, wrt bug #467008

  07 May 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
  Stable for ia64, wrt bug #467008

  05 May 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
  Stable for alpha, wrt bug #467008

  05 May 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
  Stable for arm, wrt bug #467008

  01 May 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
  Stable for sh, wrt bug #467008
